infrastructure/cdk.out/ChatbotRagBackendStack.template.json
{
 "Resources": {
  "ChatbotRagVpc0B9CDD44": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ChatbotRagBackendStack/ChatbotRagVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagVpc/Resource"
   }
  },
  "ChatbotRagVpcPublicSubnet1Subnet3D525F80": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "ChatbotRagBackendStack/ChatbotRagVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ChatbotRagVpc0B9CDD44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagVpc/PublicSubnet1/Subnet"
   }
  },
  "ChatbotRagVpcPublicSubnet1RouteTable670B3289": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ChatbotRagBackendStack/ChatbotRagVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ChatbotRagVpc0B9CDD44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagVpc/PublicSubnet1/RouteTable"
   }
  },
  "ChatbotRagVpcPublicSubnet1RouteTableAssociationAABEB33D": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ChatbotRagVpcPublicSubnet1RouteTable670B3289"
    },
    "SubnetId": {
     "Ref": "ChatbotRagVpcPublicSubnet1Subnet3D525F80"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "ChatbotRagVpcPublicSubnet1DefaultRoute34134A3B": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "ChatbotRagVpcIGW0266F6F5"
    },
    "RouteTableId": {
     "Ref": "ChatbotRagVpcPublicSubnet1RouteTable670B3289"
    }
   },
   "DependsOn": [
    "ChatbotRagVpcVPCGW38B9A7FC"
   ],
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "ChatbotRagVpcPublicSubnet1EIP3FE79CE4": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ChatbotRagBackendStack/ChatbotRagVpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagVpc/PublicSubnet1/EIP"
   }
  },
  "ChatbotRagVpcPublicSubnet1NATGatewayA5A0AEC0": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "ChatbotRagVpcPublicSubnet1EIP3FE79CE4",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "ChatbotRagVpcPublicSubnet1Subnet3D525F80"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ChatbotRagBackendStack/ChatbotRagVpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "ChatbotRagVpcPublicSubnet1DefaultRoute34134A3B",
    "ChatbotRagVpcPublicSubnet1RouteTableAssociationAABEB33D"
   ],
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagVpc/PublicSubnet1/NATGateway"
   }
  },
  "ChatbotRagVpcPublicSubnet2SubnetE7BA2A73": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "ChatbotRagBackendStack/ChatbotRagVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ChatbotRagVpc0B9CDD44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagVpc/PublicSubnet2/Subnet"
   }
  },
  "ChatbotRagVpcPublicSubnet2RouteTable7E226E3C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ChatbotRagBackendStack/ChatbotRagVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ChatbotRagVpc0B9CDD44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagVpc/PublicSubnet2/RouteTable"
   }
  },
  "ChatbotRagVpcPublicSubnet2RouteTableAssociation9990B552": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ChatbotRagVpcPublicSubnet2RouteTable7E226E3C"
    },
    "SubnetId": {
     "Ref": "ChatbotRagVpcPublicSubnet2SubnetE7BA2A73"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagVpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "ChatbotRagVpcPublicSubnet2DefaultRoute21C5CAC2": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "ChatbotRagVpcIGW0266F6F5"
    },
    "RouteTableId": {
     "Ref": "ChatbotRagVpcPublicSubnet2RouteTable7E226E3C"
    }
   },
   "DependsOn": [
    "ChatbotRagVpcVPCGW38B9A7FC"
   ],
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagVpc/PublicSubnet2/DefaultRoute"
   }
  },
  "ChatbotRagVpcPublicSubnet2EIPAB128256": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ChatbotRagBackendStack/ChatbotRagVpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagVpc/PublicSubnet2/EIP"
   }
  },
  "ChatbotRagVpcPublicSubnet2NATGatewayDEE9A0B0": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "ChatbotRagVpcPublicSubnet2EIPAB128256",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "ChatbotRagVpcPublicSubnet2SubnetE7BA2A73"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ChatbotRagBackendStack/ChatbotRagVpc/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "ChatbotRagVpcPublicSubnet2DefaultRoute21C5CAC2",
    "ChatbotRagVpcPublicSubnet2RouteTableAssociation9990B552"
   ],
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagVpc/PublicSubnet2/NATGateway"
   }
  },
  "ChatbotRagVpcPrivateSubnet1Subnet8A0E9AAB": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "ChatbotRagBackendStack/ChatbotRagVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ChatbotRagVpc0B9CDD44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagVpc/PrivateSubnet1/Subnet"
   }
  },
  "ChatbotRagVpcPrivateSubnet1RouteTable0370A4BA": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ChatbotRagBackendStack/ChatbotRagVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "ChatbotRagVpc0B9CDD44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagVpc/PrivateSubnet1/RouteTable"
   }
  },
  "ChatbotRagVpcPrivateSubnet1RouteTableAssociationFEC7A524": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ChatbotRagVpcPrivateSubnet1RouteTable0370A4BA"
    },
    "SubnetId": {
     "Ref": "ChatbotRagVpcPrivateSubnet1Subnet8A0E9AAB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagVpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "ChatbotRagVpcPrivateSubnet1DefaultRoute3012FDCF": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "ChatbotRagVpcPublicSubnet1NATGatewayA5A0AEC0"
    },
    "RouteTableId": {
     "Ref": "ChatbotRagVpcPrivateSubnet1RouteTable0370A4BA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagVpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "ChatbotRagVpcPrivateSubnet2Subnet0A860B4B": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "ChatbotRagBackendStack/ChatbotRagVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ChatbotRagVpc0B9CDD44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagVpc/PrivateSubnet2/Subnet"
   }
  },
  "ChatbotRagVpcPrivateSubnet2RouteTable0BEEE164": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ChatbotRagBackendStack/ChatbotRagVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "ChatbotRagVpc0B9CDD44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagVpc/PrivateSubnet2/RouteTable"
   }
  },
  "ChatbotRagVpcPrivateSubnet2RouteTableAssociation4ED57E67": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "ChatbotRagVpcPrivateSubnet2RouteTable0BEEE164"
    },
    "SubnetId": {
     "Ref": "ChatbotRagVpcPrivateSubnet2Subnet0A860B4B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagVpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "ChatbotRagVpcPrivateSubnet2DefaultRouteD480E17E": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "ChatbotRagVpcPublicSubnet2NATGatewayDEE9A0B0"
    },
    "RouteTableId": {
     "Ref": "ChatbotRagVpcPrivateSubnet2RouteTable0BEEE164"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagVpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "ChatbotRagVpcIGW0266F6F5": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ChatbotRagBackendStack/ChatbotRagVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagVpc/IGW"
   }
  },
  "ChatbotRagVpcVPCGW38B9A7FC": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "ChatbotRagVpcIGW0266F6F5"
    },
    "VpcId": {
     "Ref": "ChatbotRagVpc0B9CDD44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagVpc/VPCGW"
   }
  },
  "ChatbotRagCluster0121FBB1": {
   "Type": "AWS::ECS::Cluster",
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagCluster/Resource"
   }
  },
  "ChatbotRagFargateServiceLBE39A744C": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "ChatbotRagFargateServiceLBSecurityGroup98B18405",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "ChatbotRagVpcPublicSubnet1Subnet3D525F80"
     },
     {
      "Ref": "ChatbotRagVpcPublicSubnet2SubnetE7BA2A73"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "ChatbotRagVpcPublicSubnet1DefaultRoute34134A3B",
    "ChatbotRagVpcPublicSubnet1RouteTableAssociationAABEB33D",
    "ChatbotRagVpcPublicSubnet2DefaultRoute21C5CAC2",
    "ChatbotRagVpcPublicSubnet2RouteTableAssociation9990B552"
   ],
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagFargateService/LB/Resource"
   }
  },
  "ChatbotRagFargateServiceLBSecurityGroup98B18405": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB ChatbotRagBackendStackChatbotRagFargateServiceLB47948FD7",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "ChatbotRagVpc0B9CDD44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagFargateService/LB/SecurityGroup/Resource"
   }
  },
  "ChatbotRagFargateServiceLBSecurityGrouptoChatbotRagBackendStackChatbotRagFargateServiceSecurityGroupE691B052800082FC67B9": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "ChatbotRagFargateServiceSecurityGroupE98ADE7B",
      "GroupId"
     ]
    },
    "FromPort": 8000,
    "GroupId": {
     "Fn::GetAtt": [
      "ChatbotRagFargateServiceLBSecurityGroup98B18405",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "ToPort": 8000
   },
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagFargateService/LB/SecurityGroup/to ChatbotRagBackendStackChatbotRagFargateServiceSecurityGroupE691B052:8000"
   }
  },
  "ChatbotRagFargateServiceLBPublicListener383CA95F": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "ChatbotRagFargateServiceLBPublicListenerECSGroupDBDF7F99"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "ChatbotRagFargateServiceLBE39A744C"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagFargateService/LB/PublicListener/Resource"
   }
  },
  "ChatbotRagFargateServiceLBPublicListenerECSGroupDBDF7F99": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": {
     "Ref": "ChatbotRagVpc0B9CDD44"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagFargateService/LB/PublicListener/ECSGroup/Resource"
   }
  },
  "ChatbotRagFargateServiceTaskDefTaskRole038D28B6": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagFargateService/TaskDef/TaskRole/Resource"
   }
  },
  "ChatbotRagFargateServiceTaskDefEC9F9B20": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "PROJECT_NAME",
        "Value": "Biomedical RAG OPs (AWS Live)"
       }
      ],
      "Essential": true,
      "Image": "seba39399/biomedical-rag-backend:latest",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "ChatbotRagFargateServiceTaskDefwebLogGroup5B3B3319"
        },
        "awslogs-stream-prefix": "ChatbotRagFargateService",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "web",
      "PortMappings": [
       {
        "ContainerPort": 8000,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "512",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "ChatbotRagFargateServiceTaskDefExecutionRole73DCC270",
      "Arn"
     ]
    },
    "Family": "ChatbotRagBackendStackChatbotRagFargateServiceTaskDefF6706009",
    "Memory": "1024",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "ChatbotRagFargateServiceTaskDefTaskRole038D28B6",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagFargateService/TaskDef/Resource"
   }
  },
  "ChatbotRagFargateServiceTaskDefwebLogGroup5B3B3319": {
   "Type": "AWS::Logs::LogGroup",
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagFargateService/TaskDef/web/LogGroup/Resource"
   }
  },
  "ChatbotRagFargateServiceTaskDefExecutionRole73DCC270": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagFargateService/TaskDef/ExecutionRole/Resource"
   }
  },
  "ChatbotRagFargateServiceTaskDefExecutionRoleDefaultPolicyC6424DC3": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "ChatbotRagFargateServiceTaskDefwebLogGroup5B3B3319",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "ChatbotRagFargateServiceTaskDefExecutionRoleDefaultPolicyC6424DC3",
    "Roles": [
     {
      "Ref": "ChatbotRagFargateServiceTaskDefExecutionRole73DCC270"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagFargateService/TaskDef/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "ChatbotRagFargateService83B6D5AE": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "ChatbotRagCluster0121FBB1"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "DesiredCount": 1,
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "web",
      "ContainerPort": 8000,
      "TargetGroupArn": {
       "Ref": "ChatbotRagFargateServiceLBPublicListenerECSGroupDBDF7F99"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "ChatbotRagFargateServiceSecurityGroupE98ADE7B",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "ChatbotRagVpcPrivateSubnet1Subnet8A0E9AAB"
       },
       {
        "Ref": "ChatbotRagVpcPrivateSubnet2Subnet0A860B4B"
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "ChatbotRagFargateServiceTaskDefEC9F9B20"
    }
   },
   "DependsOn": [
    "ChatbotRagFargateServiceLBPublicListenerECSGroupDBDF7F99",
    "ChatbotRagFargateServiceLBPublicListener383CA95F",
    "ChatbotRagFargateServiceTaskDefTaskRole038D28B6"
   ],
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagFargateService/Service/Service"
   }
  },
  "ChatbotRagFargateServiceSecurityGroupE98ADE7B": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "ChatbotRagBackendStack/ChatbotRagFargateService/Service/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "ChatbotRagVpc0B9CDD44"
    }
   },
   "DependsOn": [
    "ChatbotRagFargateServiceTaskDefTaskRole038D28B6"
   ],
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagFargateService/Service/SecurityGroup/Resource"
   }
  },
  "ChatbotRagFargateServiceSecurityGroupfromChatbotRagBackendStackChatbotRagFargateServiceLBSecurityGroup3BF3C76C80000B92CA6F": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Load balancer to target",
    "FromPort": 8000,
    "GroupId": {
     "Fn::GetAtt": [
      "ChatbotRagFargateServiceSecurityGroupE98ADE7B",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "ChatbotRagFargateServiceLBSecurityGroup98B18405",
      "GroupId"
     ]
    },
    "ToPort": 8000
   },
   "DependsOn": [
    "ChatbotRagFargateServiceTaskDefTaskRole038D28B6"
   ],
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/ChatbotRagFargateService/Service/SecurityGroup/from ChatbotRagBackendStackChatbotRagFargateServiceLBSecurityGroup3BF3C76C:8000"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31RwW7CMAz9Fu4hg07anTGGkNBWtYgrcoMpHiGpEgeEqv771JYWxqad/Pzy7NjPkYxeRnI0gLMfqu1hqCmTZcqgDgLOflOiimS5LpSY7sw6noo4ZJpUGjKDXHM3lNjAuIJM442/cRPvrSJgsqYX12C2iOvwATwHxjNcROzoBIy3xgvD6Az2gnaSazZhBrU/omGRogqO+DJ3NhTNDP8Ss9yh97/ohWn4SqDyspzq4BldrergO7gc6q384Q13ZKjb6ZGxhoEMujvuWpuiO5FqfWph892mAK5X9XJSFJpU49bSwvYVNBiF24dy1OCZlLawzRoFmfwUyfLv6maJH/m9jjyjuWo6fPe+Apcj90bepZUgOMoyse3dmxhbTao5VIsqoW3uZbm0ed+iw1UlEvQ2uNaPz8BF4ErEF95b8/Qsx5EcR4MvTzR0wTAdUSZt/AY8p1HluwIAA [...]
   },
   "Metadata": {
    "aws:cdk:path": "ChatbotRagBackendStack/CDKMetadata/Default"
   },
   "Condition": "CDKMetadataAvailable"
  }
 },
 "Outputs": {
  "ChatbotRagFargateServiceLoadBalancerDNSF9468BF3": {
   "Value": {
    "Fn::GetAtt": [
     "ChatbotRagFargateServiceLBE39A744C",
     "DNSName"
    ]
   }
  },
  "ChatbotRagFargateServiceServiceURL5AF45E88": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "http://",
      {
       "Fn::GetAtt": [
        "ChatbotRagFargateServiceLBE39A744C",
        "DNSName"
       ]
      }
     ]
    ]
   }
  }
 },
 "Conditions": {
  "CDKMetadataAvailable": {
   "Fn::Or": [
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "af-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-3"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-4"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-northwest-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-2"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "il-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "sa-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-1"
       ]
      }
     ]
    },
    {
     "Fn::Equals": [
      {
       "Ref": "AWS::Region"
      },
      "us-west-2"
     ]
    }
   ]
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
